// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should match snapshot 1`] = `
<div
  className="App"
>
  <h1
    className="Header"
  >
    React Wars
  </h1>
  <div>
    <h1>
      Characters
    </h1>
  </div>
</div>
`;

exports[`<Characters /> should match snapshot 1`] = `
<div>
  <h1>
    Characters
  </h1>
</div>
`;
